--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: danilo_rafael
+name: prova1_web
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -27,8 +27,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  google_fonts: ^2.1.0
+    cupertino_icons: ^1.0.2
+    google_fonts: ^2.1.0
+
+  
 
 dev_dependencies:
   flutter_test:
