--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^3.1.0
+  firebase_auth: ^3.2.0
+  firebase_core: ^1.10.0
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
